LandingPage ProfileCard alignment bug fixed

--- a/portfolio/src/components/landing-page/landing-page.css
+++ b/portfolio/src/components/landing-page/landing-page.css
@@ -62,10 +62,13 @@ position: absolute;
 }
 
 .landing-page-profile-card {
+	display: flex;
+	justify-content: center;
 	position: fixed;
 	align-self: center;
 	top: 95px;
 }
+
 @keyframes pulse {
 	0% {
 		transform: scale(0.95);
